--- a/index.html
+++ b/index.html
@@ -25,37 +25,37 @@
          
             <div class="shahrom-left-right">
                 <div class="shahrom-icons">
-<<<<<<< Updated upstream
+
                     <img class="shah-img1" src="./images/1 (9).png" alt="">
                     <img class="shah-img2" src="./images/1 (8).png" alt="">
                     <img class="shah-img3" src="./images/1 (10).png" alt="">
                 </div>
                 <div class="shahrom-left">
                     <img src="./images/1 (2).png" alt="">
-=======
+
                     <img class="shah-img1" src="./images/Vector (13).png" alt="">
                     <img class="shah-img2" src="./images/Vector (11).png" alt="">
                     <img class="shah-img3" src="./images/Vector (12).png" alt="">
                 </div>
                 <div class="shahrom-left">
                     <img src="./images/1 (5).png" alt="">
->>>>>>> Stashed changes
+
                 </div>
                 <div class="shahrom-right">
                     <h1>Take your podcast to the <span>next </span> level </h1>
                     <div class="shsh-icons">
                         <p>listen on</p>
-<<<<<<< Updated upstream
+
                         <img src="./images/1 (1).png" alt="">
                         <img src="./images/1 (7).png" alt="">
                         <img src="./images/1 (3).png" alt="">
                         <img src="./images/1 (4).png" alt="">
-=======
+
                         <img src="./images/1 (2).png" alt="">
                         <img src="./images/1 (3).png" alt="">
                         <img src="./images/1 (4).png" alt="">
                         <img src="./images/1 (7).png" alt="">
->>>>>>> Stashed changes
+
                         <img src="./images/1 (6).png" alt="">
                     </div>
                 </div>
@@ -70,5 +70,45 @@
             </div> -->
         </div>
     </div>   
+
+
+
+    <div class="XM-container">
+        <div class="XM-center">
+          <div class="XM-top">
+            <div class="XM-left">
+              <img class="XM-circle" src="./images/RectangleXM-img1.png" alt="" />
+              <img class="XM-arrow" src="./images/IMAGEXM-img 2.png" alt="" />
+              <h5>Meet your host</h5>
+              <h1>Jacob Paulaner</h1>
+              <p>
+                Jacob has a background in audio engineering, and has been
+                podcasting since the early days.
+              </p>
+              <p>
+                He’s here to help you level up your game by sharing everything
+                he’s learned along the way.
+              </p>
+            </div>
+            <div class="XM-right">
+              <img src="./images/IMAGEXM-man.png" alt="" />
+            </div>
+          </div>
+          <div class="XM-down">
+              <div class="XM-sub">
+                  <img src="./images/IMAGEXM-sticks.png" alt="">
+              <div class="XM-chap">
+                  <p>Email Newsletter</p>
+                  <h1>Subscribe for updates</h1>
+              </div>
+              <div class="XM-rost">
+                  <input type="text" placeholder="Name">
+                  <input type="email" placeholder="Email">
+                  <button>Submit</button>
+              </div>
+          </div>
+      </div>
+        </div>
+      </div>
 </body>
 </html>
